hphp/test/slow/lang/namespaced-class-decl.php.expectf
Fatal error: A left brace ('{') is expected here. in %s on line 3
